Fix animation on Firefox

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .theme__container {
-/*    background: url(colors.gif); no-repeat center center fixed; 
+/*    background: url(colors.gif); no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -36,8 +36,23 @@ body {
      100% {background-color: rgb(26, 115, 186);}
 }
 
+@-moz-keyframes pulse {
+      0% {background-color: rgb(247, 143, 49);}
+     10% {background-color: rgb(181, 185, 53);}
+     20% {background-color: rgb(238, 49, 45);}
+     30% {background-color: rgb(38, 189, 207);}
+     40% {background-color: rgb(177, 28, 84);}
+     50% {background-color: rgb(128, 201, 210);}
+     60% {background-color: rgb(106, 37, 105);}
+     70% {background-color: rgb(17, 170, 88);}
+     80% {background-color: rgb(239, 91, 161);}
+     90% {background-color: rgb(137, 183, 127);}
+     100% {background-color: rgb(26, 115, 186);}
+}
+
 .color__pulsing {
     -webkit-animation: pulse 3.5s infinite alternate;
+    -moz-animation: pulse 3.5s infinite alternate;
     background-color: rgb(247, 143, 49);
 }
 
@@ -82,7 +97,7 @@ body {
     margin-bottom: 15px;
 }
 
-.header__tw {    
+.header__tw {
     font-size: 1.8em;
     font-style: italic;
     font-weight: 100;
